argo-workflows/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-server
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /argo/
            pathType: Prefix
            backend:
              service:
                name: argo-argo-workflows-server
                port:
                  number: 2746
          - path: /argo
            pathType: Exact
            backend:
              service:
                name: argo-argo-workflows-server
                port:
                  number: 2746
